--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
     <body>
         <div id='score'></div>
         <canvas id="tetris" width="200" height="400"></canvas>
+        <div>Controls :<br>
+            Left and Right to move piece <br>
+            Down to drop it faster<br>
+            A and Z to rotate it left and right
+        </div>
         <script src="tetris.js"></script>
     </body>
 
